--- a/gradle/signing.gradle
+++ b/gradle/signing.gradle
@@ -33,7 +33,7 @@ task gpg(type: Sign) {
 
     def outputDir = new File(sourceDir, "signed-gpg");
 
-    sourceDir = new File(sourceDir, "signed")
+    sourceDir = new File(sourceDir, "unsigned")
 
     assert sourceDir != null
     assert sourceDir.exists()
